bugfix/deseng359: Fixed project description images so that they are centre-aligned by default.

--- a/src/assets/styles/components/ckeditor.scss
+++ b/src/assets/styles/components/ckeditor.scss
@@ -3,14 +3,19 @@
   figure.image {
     position: relative;
 
+    img {
+      max-width: 100%;
+    }
+
+    img:not(.image-style-side) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     &.image-style-side {
       float: right;
       margin-left: 1.5em;
       max-width: 50%;
-
-      img {
-        max-width: 100%;
-      }
     }
   }
 }
